implementado redis, corregido errores de mongo, readme actualizado
